duniverse/menhirLib.20200211/test/static/bad/keyword-in-header.mly
%{

  let x = $1

%}

%token A B
%start foo

foo: A B {}
