duniverse/menhirLib.20200211/test/static/bad/keyword-in-header.exp
File "keyword-in-header.mly", line 3, characters 10-12:
Error: a Menhir keyword cannot be used in an OCaml header.
